Fix some things

--- a/views/account.html
+++ b/views/account.html
@@ -40,6 +40,7 @@
             document.getElementById('avatar-url').value = url;
           }
           else{
+            console.log(xhr);
             alert('Could not upload file.');
           }
         }
@@ -54,7 +55,7 @@
     */
     function getSignedRequest(file){
       const xhr = new XMLHttpRequest();
-      xhr.open('GET', `/sign-s3?file-name=${file.name}&file-type=${file.type}`);
+      xhr.open('GET', `/sign-s3?file-name=${file.name}&file-type=${file.type}&file=${file}`);
       xhr.onreadystatechange = () => {
         if(xhr.readyState === 4){
           if(xhr.status === 200){
